--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,10 @@
 
 <body>
     <app-root></app-root>
+
+    <script>
+        document.addEventListener('contextmenu', event => event.preventDefault());
+    </script>
 </body>
 
 </html>
